Update to minecraft 1.18 (#1446)